# rapi

./: Cargo.toml  README.md  build.rs
.github/workflows/: deploy.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  introduction.md  screens-collections.md  screens-environments.md  screens-settings.md  screens.md
docs/src/developer/: composable-widgets.md  message-routing.md  project-structure.md
docs/src/guides/: collections.md  environments.md  settings.md
docs/src/reference/: configuration.md  screens.md
fonts/: icons.toml
src/: icon.rs  main.rs
src/config/: mod.rs
src/http/: client.rs  method.rs  request.rs  response.rs
src/screens/: app_screen.rs  contracts.rs  environments_screen.rs  home_screen.rs  mod.rs  route.rs  settings_screen.rs
src/widgets/: activity_bar.rs  body_editor.rs  collections_panel.rs  key_value_editor.rs  mod.rs  response_viewer.rs  side_bar.rs  status_bar.rs  tab_bar.rs  url_bar.rs
