[package]
name = "rapi"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
iced = { version = "0.13.1", features = ["image", "debug", "tokio", "highlighter"]}
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "1.0.6"
